--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "jwt-decode": "^3.1.2",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
