--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.5",
     "jwt-decode": "^3.1.2",
+    "mdb-react-ui-kit": "^5.1.0",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-carousel-minimal": "^1.4.1",
