--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mdb-react-ui-kit": "^5.1.0",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-carousel-minimal": "^1.4.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
